dhall/tests/import/failure/importBoundary.txt
Type error: error: unbound variable `x`
 --> <current file>:1:1
  |
...
3 | x
  | ^ not found in this scope
  |
